# cryptfed

./: .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  LICENSE  PAYLOAD_INTEGRATION.md  README.md  cryptfed_extended_abstract.tex  fix_tensorflow_privacy.sh  pyproject.toml  requirements.txt  set_pythonpath.sh  setup.py  verify_installation.py
cryptfed/: __init__.py
cryptfed/aggregators/: __init__.py  base_aggregator.py  fed_avg_momentum.py  fed_median.py  fed_prox.py  fed_trimmed_mean.py  flame_byzantine.py  fools_gold.py  krum.py  modular_aggregator.py  multi_krum.py  plaintext_fedavg.py  secure_ckks_fedavg.py  secure_fed_avg.py  secure_integer_fedavg.py  secure_krum.py  secure_trimmed_mean.py
cryptfed/core/: __init__.py  benchmark_manager.py  federated_client.py  federated_server.py  fhe_graph.py  payload.py  protocol_state.py  threshold_channel.py
cryptfed/fhe/: __init__.py  base_fhe_manager.py  bfv_manager.py  bgv_manager.py  ckks_manager.py  threshold_bfv_manager.py  threshold_bgv_manager.py  threshold_ckks_manager.py
examples/: README.md  protocol_state_machine_demo.py
examples/level_1_basic/: README.md  basic_cifar10.py  basic_mnist.py  basic_mnist_fixed.py  basic_tabular.py
examples/level_2_intermediate/: README.md  fhe_schemes_comparison.py  threshold_fhe_mnist.py
examples/level_3_advanced/: CIFAR10_example.py  MNIST_robust_example.py  README.md  UCI_Adult_example.py  byzantine_robustness_comparison.py  secure_krum_mnist_example.py  test_ACSIncome.py
examples/level_4_modularity/: README.md  basic_payload.py  common_graph_patterns.py  custom_aggregation_function.py  fairness_spd_weighted_aggregation.py  fairness_weighted_aggregation.py  fhe_graph_validation.py  graph_depth_estimation.py  graph_summary.py
